Add JUnit 5 unit tests with JaCoCo 95% line coverage enforcement
- Configure JaCoCo 0.8.12 plugin in parent pom with 95% line / 85% branch coverage gates
- Add Mockito, AssertJ test dependencies to module POMs
- Exclude *Application classes from coverage check (main methods only)

Tests added per module:
- customers-service: Owner, Pet, PetType, OwnerResource, PetResource, OwnerEntityMapper, MetricConfig (37 tests)
- vets-service: Vet, Specialty, VetResource, CacheConfig, VetsProperties (12 tests)
- visits-service: Visit, VisitResource, MetricConfig (10 tests)
- api-gateway: ApiGatewayController, FallbackController, service clients, DTOs (19 tests)
- genai-service: PetclinicTools, AIDataProvider, PetclinicChatClient, VectorStoreController, AIBeanConfiguration, DTOs (27 tests)

Total: ~105 unit tests covering all business logic with comprehensive happy path, error handling, and edge case coverage.